--- a/Clash/config/ACL4SSR_BackCN.ini
+++ b/Clash/config/ACL4SSR_BackCN.ini
@@ -22,10 +22,11 @@ ruleset=🚀 中国代理,rules/ACL4SSR/Clash/ChinaCompanyIp.list
 ruleset=🚀 中国代理,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
+custom_proxy_group=🎯 全球直连`select`[]♻️ 自动选择`[]DIRECT`.*
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 中国代理`select`[]DIRECT`.*
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 中国代理
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]DIRECT`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 中国代理`[]🎯 全球直连`.*
 
 enable_rule_generator=true
