--- a/new.ini
+++ b/new.ini
@@ -48,7 +48,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`.*
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]DIRECT`[]REJECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 中国代理`.*
+custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 出国代理`.*
 
 
 ;启用自定义规则集
