--- a/clashmeta.ini
+++ b/clashmeta.ini
@@ -1,110 +1,83 @@
 ; ========================
-; 🚀 Clash 终极优化版 (blackmatrix7源)
-; 设计原则：极简匹配 | 智能分流 | 动态更新
-; 更新时间：2023-10-21
+; 🚀 Clash 规则集 (blackmatrix7源)
+; 设计原则：拦截优先 → 国内直连 → 国外代理 → 游戏/流媒体 → 最终兜底
+; 更新时间：2023-10-20
 ; ========================
 
 ; ########################
-; 🔄 动态规则提供者（自动更新）
+; 🔒 拦截规则（最高优先级）
 ; ########################
-rule-providers:
-  # 拦截类规则
-  adblock:
-    type: http
-    behavior: domain
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml"
-    path: ./rules/adblock.yaml
-    interval: 86400  # 24小时更新
-
-  # 国内规则
-  china:
-    type: http
-    behavior: classical
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.yaml"
-    path: ./rules/china.yaml
-    interval: 86400
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.list
 
 ; ########################
-; 🚦 核心规则（按匹配优先级排序）
+; 🏠 国内直连规则
 ; ########################
-rules:
-  # 1. 强制拦截规则（最高优先级）
-  - RULE-SET,adblock,🛑 全球拦截
-  - DOMAIN,analytics.google.com,🛑 全球拦截  # 补充常见跟踪域名
-  - DOMAIN-KEYWORD,adservice,🛑 全球拦截
+; ▼ 基础国内规则
+ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
+ruleset=🎯 全球直连,[]GEOSITE,CN
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaIPs/ChinaIPs.list
 
-  # 2. 国内直连
-  - RULE-SET,china,🎯 全球直连
-  - GEOIP,CN,🎯 全球直连,no-resolve
-  - GEOSITE,CN,🎯 全球直连
-  - GEOSITE,private,🎯 全球直连  # 本地网络
-  - DOMAIN-SUFFIX,cn,🎯 全球直连  # 兜底CN域名
-
-  # 3. 常用国外服务分流
-  - GEOSITE,google,🚀 出国代理
-  - GEOSITE,github,🚀 出国代理
-  - GEOSITE,netflix,🚀 出国代理
-  - GEOSITE,openai,🚀 出国代理  # AI服务专用分流
-  - GEOSITE,geolocation-!cn,🚀 出国代理  # 非中国地区域名
-
-  # 4. 游戏平台特殊处理
-  - DOMAIN-KEYWORD,steam,🚀 出国代理
-  - DOMAIN-SUFFIX,epicgames.com,🚀 出国代理
-  - IP-CIDR,192.0.73.0/24,🚀 出国代理  # PlayStation网络
-
-  # 5. 最终兜底规则
-  - MATCH,🐟 漏网之鱼
+; ▼ 国内细分服务
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SpeedtestCN/SpeedtestCN.list
 
 ; ########################
-; ⚡ 策略组智能优化
+; 🌍 国外代理规则
 ; ########################
-proxy-groups:
-  - name: "🚀 出国代理"
-    type: select
-    proxies:
-      - ♻️ 自动选择
-      - DIRECT  # 直连备选
+; ▼ 国际通用规则
+ruleset=🚀 出国代理,[]GEOSITE,geolocation-!cn
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
 
-  - name: "♻️ 自动选择"
-    type: url-test
-    url: "http://www.gstatic.com/generate_204"
-    interval: 300  # 10分钟测速
-    tolerance: 50  # 延迟容差(ms)
-    proxies: $proxy-providers.proxy_auto  # 引用代理提供商
+; ▼ 云服务与工具
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 
-  - name: "🎯 全球直连"
-    type: select
-    proxies:
-      - DIRECT
+; ▼ 社交媒体
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 
-  - name: "🛑 全球拦截"
-    type: select
-    proxies:
-      - REJECT
-      - DIRECT  # 调试用备选
-
-  - name: "🐟 漏网之鱼"
-    type: select
-    proxies:
-      - 🚀 出国代理
-      - 🎯 全球直连
+; ▼ AI相关服务
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bard/Bard.list
 
 ; ########################
-; 🛠️ 高级引擎配置
+; 🎮 游戏与流媒体
 ; ########################
-dns:
-  enable: true
-  enhanced-mode: fake-ip
-  nameserver:
-    - 223.5.5.5  # 阿里DNS
-    - 119.29.29.29  # 腾讯DNS
-  fallback:
-    - tls://8.8.4.4:853  # 加密DNS
+; ▼ 游戏平台
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list
 
-tun:
-  enable: true
-  stack: system
-  auto-route: true
+; ▼ 流媒体服务
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 
-experimental:
-  ignore-resolve-fail: true  # 跳过解析失败域名
+; ########################
+; 🐟 最终规则（必须最后）
+; ########################
+ruleset=🐟 漏网之鱼,[]FINAL
+
+; ########################
+; ⚙️ 策略组配置
+; ########################
+custom_proxy_group=🚀 出国代理`select`[]♻️ 自动选择`[]DIRECT`.*
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`.*
+custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]DIRECT`[]REJECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 出国代理`.*
+
+; ########################
+; 🔧 引擎配置
+; ########################
+enable_rule_generator=true
+overwrite_original_rules=true
+enable_cache=true  ; 启用规则缓存提升加载速度
