--- a/clashmeta.ini
+++ b/clashmeta.ini
@@ -1,83 +1,23 @@
-; ========================
-; 🚀 Clash 规则集 (blackmatrix7源)
-; 设计原则：拦截优先 → 国内直连 → 国外代理 → 游戏/流媒体 → 最终兜底
-; 更新时间：2023-10-20
-; ========================
+[ruleset]
+; 核心规则
+ruleset=🛑 广告拦截,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/Clash/BanAD.list
+ruleset=🎯 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 国内直连,[]GEOSITE,CN
+ruleset=🎯 国内直连,[]GEOIP,CN,no-resolve
 
-; ########################
-; 🔒 拦截规则（最高优先级）
-; ########################
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
-ruleset=🍃 应用净化,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.list
+; 国外服务
+ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
+ruleset=📺 流媒体服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
-; ########################
-; 🏠 国内直连规则
-; ########################
-; ▼ 基础国内规则
-ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
-ruleset=🎯 全球直连,[]GEOSITE,CN
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaIPs/ChinaIPs.list
+; 最终规则
+ruleset=🐟 最终规则,[]FINAL
 
-; ▼ 国内细分服务
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SpeedtestCN/SpeedtestCN.list
+[proxy_group]
+; 策略组配置同第二部分优化内容
 
-; ########################
-; 🌍 国外代理规则
-; ########################
-; ▼ 国际通用规则
-ruleset=🚀 出国代理,[]GEOSITE,geolocation-!cn
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
-
-; ▼ 云服务与工具
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
-
-; ▼ 社交媒体
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
-
-; ▼ AI相关服务
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bard/Bard.list
-
-; ########################
-; 🎮 游戏与流媒体
-; ########################
-; ▼ 游戏平台
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list
-
-; ▼ 流媒体服务
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
-
-; ########################
-; 🐟 最终规则（必须最后）
-; ########################
-ruleset=🐟 漏网之鱼,[]FINAL
-
-; ########################
-; ⚙️ 策略组配置
-; ########################
-custom_proxy_group=🚀 出国代理`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`.*
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🍃 应用净化`select`[]DIRECT`[]REJECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 出国代理`.*
-
-; ########################
-; 🔧 引擎配置
-; ########################
-enable_rule_generator=true
+[settings]
+enable_rule_compression=true
 overwrite_original_rules=true
-enable_cache=true  ; 启用规则缓存提升加载速度
+persistent=true
+cache_time=3600
