--- a/clashmeta.ini
+++ b/clashmeta.ini
@@ -1,23 +1,31 @@
-[ruleset]
-; 核心规则
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/Clash/BanAD.list
-ruleset=🎯 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 国内直连,[]GEOSITE,CN
-ruleset=🎯 国内直连,[]GEOIP,CN,no-resolve
-
-; 国外服务
-ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
-ruleset=📺 流媒体服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-
-; 最终规则
-ruleset=🐟 最终规则,[]FINAL
-
-[proxy_group]
-; 策略组配置同第二部分优化内容
-
-[settings]
-enable_rule_compression=true
+[General]
+# 基础设置
+enable_rule_generator=true
 overwrite_original_rules=true
+rule_update_interval=86400
 persistent=true
-cache_time=3600
+
+[Rule Providers]
+# 规则集预加载（Clash Premium特有功能）
+Download.list=url,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list,86400
+China.list=url,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list,86400
+
+[rules]
+# 规则处理顺序（修正后的核心逻辑）
+RULE-SET,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/Clash/BanAD.list,🛑 广告拦截
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,🎯 国内直连
+RULE-SET,China.list,🎯 国内直连
+GEOSITE,CN,🎯 国内直连
+GEOIP,CN,🎯 国内直连,no-resolve
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list,🚀 节点选择
+GEOSITE,geolocation-!cn,🚀 节点选择
+FINAL,🐟 最终规则
+
+[Proxy Groups]
+# 修正后的策略组（关键修正点）
+🚀 节点选择=select,♻️ 自动选择,DIRECT,include-all-providers=true
+♻️ 自动选择=url-test,.*,http://www.gstatic.com/generate_204,300,50,include-all-providers=true
+📺 流媒体服务=select,🚀 节点选择,♻️ 自动选择,include-all-providers=true
+🎯 国内直连=select,DIRECT,REJECT
+🛑 广告拦截=select,REJECT,DIRECT
+🐟 最终规则=select,🎯 国内直连,🚀 节点选择,🛑 广告拦截
