--- a/clashmeta.ini
+++ b/clashmeta.ini
@@ -1,31 +1,52 @@
-[General]
-# 基础设置
+[custom]
+
+;规则集定义
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Unblock/Unblock.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleCN/GoogleCN.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
+ruleset=🚀 出国代理,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Origin/Origin.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
+ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GFW/GFW.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaDomain/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaIP/ChinaIP.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
+ruleset=🎯 全球直连,[]GEOSITE,CN
+ruleset=🚀 出国代理,[]GEOSITE,geolocation-!cn
+ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
+ruleset=🐟 漏网之鱼,[]FINAL
+
+;策略组定义（保持原样）
+custom_proxy_group=🚀 出国代理`select`[]♻️ 自动选择`[]DIRECT`.*
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`.*
+custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]DIRECT`[]REJECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 出国代理`.*
+
+;启用自定义规则集
 enable_rule_generator=true
 overwrite_original_rules=true
-rule_update_interval=86400
-persistent=true
-
-[Rule Providers]
-# 规则集预加载（Clash Premium特有功能）
-Download.list=url,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list,86400
-China.list=url,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list,86400
-
-[rules]
-# 规则处理顺序（修正后的核心逻辑）
-RULE-SET,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/Clash/BanAD.list,🛑 广告拦截
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,🎯 国内直连
-RULE-SET,China.list,🎯 国内直连
-GEOSITE,CN,🎯 国内直连
-GEOIP,CN,🎯 国内直连,no-resolve
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list,🚀 节点选择
-GEOSITE,geolocation-!cn,🚀 节点选择
-FINAL,🐟 最终规则
-
-[Proxy Groups]
-# 修正后的策略组（关键修正点）
-🚀 节点选择=select,♻️ 自动选择,DIRECT,include-all-providers=true
-♻️ 自动选择=url-test,.*,http://www.gstatic.com/generate_204,300,50,include-all-providers=true
-📺 流媒体服务=select,🚀 节点选择,♻️ 自动选择,include-all-providers=true
-🎯 国内直连=select,DIRECT,REJECT
-🛑 广告拦截=select,REJECT,DIRECT
-🐟 最终规则=select,🎯 国内直连,🚀 节点选择,🛑 广告拦截
