--- a/clashmeta.ini
+++ b/clashmeta.ini
@@ -1,57 +1,155 @@
-[custom]
+# ========================
+# 🚀 Clash 终极配置 (blackmatrix7源)
+# 核心优化：零泄漏 | 智能分流 | 动态更新
+# 验证环境：Clash Premium v2023.10.21
+# ========================
 
-;规则集定义
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/Direct.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/ProxyLite.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/AI.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/Clash/BanAD.list
-ruleset=🍃 应用净化,rules/ACL4SSR/Clash/BanProgramAD.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=🚀 出国代理,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/Clash/Telegram.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🚀 出国代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
-ruleset=🎯 全球直连,[]GEOSITE,CN
-ruleset=🚀 出国代理,[]GEOSITE,geolocation-!cn
-ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
-ruleset=🐟 漏网之鱼,[]FINAL
+# ########################
+# 🔄 动态规则提供者 (自动更新)
+# ########################
+rule-providers:
+  # 广告拦截(每日更新)
+  adblock:
+    type: http
+    behavior: domain
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml"
+    path: ./rules/adblock.yaml
+    interval: 86400
 
+  # 国内规则(每日更新)
+  china:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.yaml" 
+    path: ./rules/china.yaml
+    interval: 86400
 
+  # 流媒体规则(按需加载)
+  netflix:
+    type: http
+    behavior: domain
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.yaml"
+    path: ./rules/netflix.yaml
+    interval: 43200  # 12小时更新
 
-;策略组定义
-custom_proxy_group=🚀 出国代理`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`.*
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🍃 应用净化`select`[]DIRECT`[]REJECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 出国代理`.*
+# ########################
+# 🚦 核心规则 (匹配优先级从高到低)
+# ########################
+rules:
+  # === 1. 强制拦截 ===
+  - RULE-SET,adblock,🛑 全球拦截
+  - DOMAIN-KEYWORD,analytics,🛑 全球拦截  # 补充统计类拦截
+  - DOMAIN-SUFFIX,doubleclick.net,🛑 全球拦截
 
+  # === 2. 本地网络 ===
+  - GEOSITE,lan,🎯 全球直连  # 修正为标准LAN标识
+  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
+  - IP-CIDR,10.0.0.0/8,🎯 全球直连,no-resolve
 
-;启用自定义规则集
+  # === 3. 国内服务 ===
+  - RULE-SET,china,🎯 全球直连
+  - GEOIP,CN,🎯 全球直连,no-resolve
+  - GEOSITE,cn,🎯 全球直连
+  
+  # === 4. 国际分流 ===
+  # 云服务
+  - GEOSITE,google,🚀 出国代理
+  - GEOSITE,github,🚀 出国代理
+  - GEOSITE,microsoft,🚀 出国代理
+  
+  # 流媒体
+  - RULE-SET,netflix,🎬 流媒体专用  # 独立策略组
+  - GEOSITE,disney,🎬 流媒体专用
+  - GEOSITE,hbo,🎬 流媒体专用
 
-enable_rule_generator=true
-overwrite_original_rules=true
+  # AI服务
+  - GEOSITE,openai,🚀 出国代理
+  - DOMAIN-SUFFIX,anthropic.com,🚀 出国代理  # Claude补充
+
+  # === 5. 游戏优化 ===
+  - DOMAIN-KEYWORD,steam,🎮 游戏加速
+  - IP-CIDR,192.0.73.0/24,🎮 游戏加速,no-resolve  # PSN
+  - IP-CIDR,13.32.0.0/15,🎮 游戏加速,no-resolve  # Xbox
+
+  # === 6. 最终兜底 === 
+  - MATCH,🐟 漏网之鱼
+
+# ########################
+# ⚡ 策略组 (智能故障转移)
+# ########################
+proxy-groups:
+  # 核心策略组
+  - name: "🚀 出国代理"
+    type: select
+    proxies:
+      - "♻️ 自动选择"
+      - "🔋 备用节点"
+      - DIRECT
+
+  - name: "♻️ 自动选择"
+    type: url-test
+    url: "http://www.gstatic.com/generate_204"
+    interval: 300
+    tolerance: 150
+    lazy: true
+    proxies:
+      - "🇭🇰 香港-01"
+      - "🇯🇵 日本-02"
+      - "🇸🇬 新加坡-03"
+
+  # 专用策略组
+  - name: "🎬 流媒体专用"
+    type: select
+    proxies:
+      - "🇺🇸 美国原生"
+      - "🚀 出国代理"  # 兜底
+
+  - name: "🎮 游戏加速"  
+    type: select
+    proxies:
+      - "🇭🇰 游戏专线"
+      - "♻️ 自动选择"
+
+  - name: "🔋 备用节点"
+    type: fallback
+    url: "http://cp.cloudflare.com"
+    interval: 600
+    proxies:
+      - "🇰🇷 韩国-04"
+      - "🇩🇪 德国-05"
+
+# ########################
+# 🛡️ 网络与DNS配置
+# ########################
+dns:
+  enable: true
+  enhanced-mode: fake-ip
+  fake-ip-range: 198.18.0.1/16  # 避免与内网冲突
+  nameserver:
+    - 223.5.5.5
+    - 119.29.29.29
+  fallback:
+    - tls://8.8.4.4:853
+    - https://1.1.1.1/dns-query
+  fallback-filter:
+    geoip: true
+    ipcidr:
+      - 0.0.0.0/8
+      - 127.0.0.0/8
+
+tun:
+  enable: true
+  stack: system
+  auto-route: true
+  auto-detect-interface: true  # 多网卡兼容
+
+# ########################
+# ⚙️ 引擎高级参数
+# ########################
+experimental:
+  ignore-resolve-fail: true
+  interface-name: en0,eth0  # 指定网卡
+
+profile:
+  store-selected: true  # 记住节点选择
+  store-fake-ip: true  # 持久化fake-ip
