--- a/new.ini
+++ b/new.ini
@@ -5,7 +5,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blland/ACL4SSR/refs/
 ruleset=🚀 出国代理,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/ProxyLite.list
 ruleset=🚀 出国代理,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/AI.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/Clash/BanAD.list
-ruleset=🍃 应用净化,rules/ACL4SSR/Clash/BanProgramAD.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/blland/ACL4SSR/Clash/BanProgramAD.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🚀 出国代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
