--- a/clashmeta.ini
+++ b/clashmeta.ini
@@ -48,6 +48,7 @@ rules:
 
   # === 3. 国内服务 ===
   - RULE-SET,china,🎯 全球直连
+  - IP-CIDR,129.134.147.0/20,no-resolve
   - GEOIP,CN,🎯 全球直连,no-resolve
   - GEOSITE,cn,🎯 全球直连
   
