--- a/clashmeta.ini
+++ b/clashmeta.ini
@@ -49,6 +49,7 @@ rules:
   # === 3. 国内服务 ===
   - RULE-SET,china,🎯 全球直连
   - IP-CIDR,129.134.147.0/20,no-resolve
+  - IP-CIDR,157.240.254.0/20,no-resolve
   - GEOIP,CN,🎯 全球直连,no-resolve
   - GEOSITE,cn,🎯 全球直连
   
