--- a/clashmeta.ini
+++ b/clashmeta.ini
@@ -23,6 +23,12 @@ rule-providers:
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.yaml" 
     path: ./rules/china.yaml
     interval: 86400
+  whatsapp:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/Clash/Ruleset/Whatsapp.list" 
+    path: ./rules/whatsapp.yaml
+    interval: 86400
 
   # 流媒体规则(按需加载)
   netflix:
@@ -47,6 +53,7 @@ rules:
   - IP-CIDR,10.0.0.0/8,🎯 全球直连,no-resolve
 
   # === 3. 国内服务 ===
+  - RULE-SET,whatsapp,🎯 全球直连
   - RULE-SET,china,🎯 全球直连
   - GEOIP,CN,🎯 全球直连,no-resolve
   - GEOSITE,cn,🎯 全球直连
