--- a/new.ini
+++ b/new.ini
@@ -2,6 +2,7 @@
 
 ;规则集定义
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/Direct.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Whatsapp/Whatsapp.list
 ruleset=🚀 出国代理,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/ProxyLite.list
 ruleset=🚀 出国代理,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/AI.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/blland/ACL4SSR/refs/heads/master/Clash/BanAD.list
