--- a/Clash/config/ACL4SSR_Online_Mini.ini
+++ b/Clash/config/ACL4SSR_Online_Mini.ini
@@ -21,6 +21,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blland/ACL4SSR/maste
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blland/ACL4SSR/master/Clash/Apple.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blland/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blland/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/blland/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/blland/ACL4SSR/master/Clash/Telegram.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/blland/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/blland/ACL4SSR/master/Clash/ProxyLite.list
